--- a/reset-password.html
+++ b/reset-password.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Reset Password - Cable Manager</title>
+    <link rel="preconnect" href="https://unpkg.com" crossorigin>
+    <link rel="dns-prefetch" href="https://unpkg.com">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     <link rel="stylesheet" href="assets/css/base/variables.css">
     <link rel="stylesheet" href="assets/css/pages/reset-password.css">
     <!-- Ionicons for Icons -->
@@ -55,117 +59,9 @@
     </div>
 
     <!-- Supabase SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="assets/js/supabase.js"></script>
-
-    <script>
-        // Initialize theme
-        const savedTheme = localStorage.getItem('theme') || 'dark';
-        document.documentElement.setAttribute('data-theme', savedTheme);
-
-        const form = document.getElementById('reset-form');
-        const btn = document.getElementById('reset-btn');
-        const messageDiv = document.getElementById('message');
-        const messageText = document.getElementById('message-text');
-        const messageIcon = document.getElementById('message-icon');
-
-        function showMessage(text, type) {
-            messageDiv.className = `message show ${type}`;
-            messageText.textContent = text;
-            messageIcon.setAttribute('name', type === 'error' ? 'alert-circle-outline' : 'checkmark-circle-outline');
-        }
-
-        // Supabase email link token handling
-        (async () => {
-            const hashParams = new URLSearchParams(window.location.hash.substring(1));
-            const type = hashParams.get('type');
-            const accessToken = hashParams.get('access_token');
-            const refreshToken = hashParams.get('refresh_token');
-
-            if ((type === 'recovery' || type === 'invite' || type === 'signup') && accessToken && refreshToken) {
-                // Set session from tokens in URL hash
-                const { data: { session }, error } = await window.SupabaseClient.auth.setSession({
-                    access_token: accessToken,
-                    refresh_token: refreshToken
-                });
-
-                if (error || !session) {
-                    showMessage('Invalid or expired link. Please request a new one.', 'error');
-                    form.style.display = 'none';
-                    return;
-                }
-
-                // Update UI based on type
-                const subtitle = document.getElementById('subtitle');
-                const passwordLabel = document.getElementById('password-label');
-                if (type === 'invite' || type === 'signup') {
-                    subtitle.textContent = 'Welcome! Set your password to get started';
-                    passwordLabel.textContent = 'Create Password';
-                } else {
-                    subtitle.textContent = 'Set your new password';
-                    passwordLabel.textContent = 'New Password';
-                }
-            } else if (!accessToken) {
-                // No tokens - check if we already have a valid session
-                const { data: { session } } = await window.SupabaseClient.auth.getSession();
-                if (!session) {
-                    showMessage('Invalid or missing link. Please request a new one.', 'error');
-                    form.style.display = 'none';
-                    return;
-                }
-            }
-        })();
-
-        // Handle form submission
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirm-password').value;
-
-            // Validate passwords match
-            if (password !== confirmPassword) {
-                showMessage('Passwords do not match', 'error');
-                return;
-            }
-
-            if (password.length < 6) {
-                showMessage('Password must be at least 6 characters', 'error');
-                return;
-            }
-
-            // Show loading state
-            btn.classList.add('loading');
-            btn.disabled = true;
-
-            try {
-                // Update password
-                const { error } = await window.SupabaseClient.auth.updateUser({
-                    password: password
-                });
-
-                if (error) {
-                    showMessage(error.message, 'error');
-                    btn.classList.remove('loading');
-                    btn.disabled = false;
-                    return;
-                }
-
-                // Success
-                showMessage('Password updated successfully! Redirecting...', 'success');
-
-                // Redirect to main app after 2 seconds
-                setTimeout(() => {
-                    window.location.href = 'index.html';
-                }, 2000);
-
-            } catch (err) {
-                showMessage(err.message || 'An error occurred', 'error');
-                btn.classList.remove('loading');
-                btn.disabled = false;
-            }
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
+    <script src="assets/js/supabase.js" defer></script>
+    <script src="assets/js/reset-password-init.js" defer></script>
 </body>
 
 </html>
